@@ -26,6 +26,11 @@ HTTP, urlglob retrieval with bad range
  <command option="no-output">
 "http://%HOSTIP:%HTTPPORT/[2-1]" -o "log/weee#1.dump" --stderr -
 </command>
+# The error message on stdout implicitly depends on the length of the
+# URL, so refuse to run if the length is unexpected.
+<precheck>
+perl %SRCDIR/libtest/test75.pl http://%HOSTIP:%HTTPPORT/ 22
+</precheck>
 </client>
 
 #
